--- a/.github.workflows/run-test.yml
+++ b/.github.workflows/run-test.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Test
 
 on:
   push:
@@ -6,32 +6,31 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+
 jobs:
-  php-tests:
-    runs-on: ${{ matrix.os }}
+  build:
 
-    strategy:
-      matrix:
-        php: [8.3, 8.4]
-        dependency-version: [prefer-lowest, prefer-stable]
-        os: [ubuntu-latest]
-
-    name: P${{ matrix.php }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v1
+      - name: Validate composer.json and composer.lock
+        run: composer validate --strict
+
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v3
         with:
-          php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick
-          coverage: none
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
 
       - name: Install dependencies
-        run: |
-          composer install --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+        run: composer install --prefer-dist --no-progress
 
-      - name: Execute tests
-        run: vendor/bin/pest
+      - name: Run test suite
+        run: composer run-script test
