--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "php": "^8.3|^8.4"
+        "php": "^8.3|^8.4",
+        "laravel/prompts": "^0.3.5"
     },
     "require-dev": {
         "larastan/larastan": "^3.1",
