--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require-dev": {
         "larastan/larastan": "^3.1",
         "laravel/pint": "^1.21",
+        "livewire/livewire": "^3.6",
         "orchestra/pest-plugin-testbench": "^3.2",
         "orchestra/testbench": "^10.0",
         "phpunit/phpunit": "^11.5"
