--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,21 @@
         }
     ],
     "require": {
-        "php": "^8.3|^8.4",
-        "laravel/prompts": "^0.3.5"
+        "php": "^8.3",
+        "laravel/prompts": "^0.1"
+    },
+    "conflict": {
+        "laravel/framework": "<11.39.1 || >=13.0.0",
+        "phpunit/phpunit": "<11.5.3 || >=12.0.0"
     },
     "require-dev": {
-        "larastan/larastan": "^3.1",
-        "laravel/pint": "^1.21",
-        "livewire/livewire": "^3.6",
-        "orchestra/pest-plugin-testbench": "^3.2",
-        "orchestra/testbench": "^10.0",
-        "phpunit/phpunit": "^11.5"
+        "laravel/framework": "^11.39.1",
+        "larastan/larastan": "^3.0",
+        "laravel/pint": "^1.20.0",
+        "livewire/livewire": "^3.0",
+        "orchestra/pest-plugin-testbench": "^3.0",
+        "orchestra/testbench": "^9.0|^10.0",
+        "phpunit/phpunit": "^11.1"
     },
     "autoload": {
         "psr-4": {
