--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,15 @@
         "laravel/prompts": "^0.1"
     },
     "conflict": {
-        "laravel/framework": "<11.39.1 || >=13.0.0",
+        "laravel/framework": "<10.48.0 || >=13.0.0",
         "phpunit/phpunit": "<11.5.3 || >=12.0.0"
     },
     "require-dev": {
-        "laravel/framework": "^11.39.1",
         "larastan/larastan": "^3.0",
         "laravel/pint": "^1.20.0",
         "livewire/livewire": "^3.0",
         "orchestra/pest-plugin-testbench": "^3.0",
-        "orchestra/testbench": "^9.0|^10.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
         "phpunit/phpunit": "^11.1"
     },
     "autoload": {
