--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
     },
     "conflict": {
         "laravel/framework": "<10.48.0 || >=13.0.0",
-        "phpunit/phpunit": "<11.5.3 || >=12.0.0"
+        "phpunit/phpunit": "<10.5.45 || >=12.0.0"
     },
     "require-dev": {
         "larastan/larastan": "^3.0",
-        "laravel/pint": "^1.20.0",
+        "laravel/pint": "^1.20",
         "livewire/livewire": "^3.0",
         "orchestra/pest-plugin-testbench": "^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "phpunit/phpunit": "^11.1"
+        "phpunit/phpunit": "^10.5|^11.1"
     },
     "autoload": {
         "psr-4": {
