--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zwartpet/schedule-manager",
-    "description": "Add pause and play functionality to the laravel schedule",
+    "description": "Add pause and resume functionality to the laravel schedule",
     "keywords": [
         "zwartpet",
         "schedule-manager",
@@ -18,9 +18,10 @@
     ],
     "require": {
         "php": "^8.2",
-        "laravel/prompts": "^0.1"
+        "laravel/prompts": "<2.0.0"
     },
     "conflict": {
+        "laravel/prompts": ">=2.0.0",
         "laravel/framework": "<11.6 || >=13.0.0",
         "phpunit/phpunit": "<10.5.45 || >=12.0.0"
     },
